@@ -6,6 +6,10 @@ envlist = py{35,36,37,38}
 skip_missing_interpreters = true
 isolated_build = true
 
+# Configuration variables to share accross environments
+[config]
+BST_PLUGINS_EXPERIMENTAL_VERSION = 0.13.0
+
 #
 # Defaults for all environments
 #
@@ -18,9 +22,13 @@ usedevelop =
 
 commands =
     # Running with coverage reporting enabled
-    py{35,36,37,38}-!nocover: pytest --basetemp {envtmpdir} --cov=buildstream --cov-config .coveragerc {posargs}
+    py{35,36,37,38}-!plugins-!nocover: pytest --basetemp {envtmpdir} --cov=buildstream --cov-config .coveragerc {posargs}
     # Running with coverage reporting disabled
-    py{35,36,37,38}-nocover: pytest --basetemp {envtmpdir} {posargs}
+    py{35,36,37,38}-!plugins-nocover: pytest --basetemp {envtmpdir} {posargs}
+    # Running external plugins tests with coverage reporting enabled
+    py{35,36,37,38}-plugins-!nocover: pytest --basetemp {envtmpdir} --cov=buildstream --cov-config .coveragerc --plugins {posargs}
+    # Running external plugins tests with coverage disabled
+    py{35,36,37,38}-plugins-nocover: pytest --basetemp {envtmpdir} --plugins {posargs}
 commands_post:
     py{35,36,37,38}-!nocover: mkdir -p .coverage-reports
     py{35,36,37,38}-!nocover: mv {envtmpdir}/.coverage {toxinidir}/.coverage-reports/.coverage.{env:COVERAGE_PREFIX:}{envname}
@@ -28,6 +36,9 @@ deps =
     py{35,36,37,38}: -rrequirements/requirements.txt
     py{35,36,37,38}: -rrequirements/dev-requirements.txt
     py{35,36,37,38}: -rrequirements/plugin-requirements.txt
+
+    # Install external plugins for plugin tests
+    py{35,36,37,38}-plugins: git+https://gitlab.com/buildstream/bst-plugins-experimental.git@{env:BST_PLUGINS_EXPERIMENTAL_VERSION:{[config]BST_PLUGINS_EXPERIMENTAL_VERSION}}#egg=bst_plugins_experimental[ostree]
 
     # Only require coverage and pytest-cov when using it
     !nocover: -rrequirements/cov-requirements.txt
@@ -51,6 +62,7 @@ passenv =
     REMOTE_EXECUTION_SERVICE
     SOURCE_CACHE_SERVICE
     SSL_CERT_FILE
+    BST_PLUGINS_EXPERIMENTAL_VERSION
 #
 # These keys are not inherited by any other sections
 #
